# Team-Vision

./: .gitignore  Flask_Toastr-0.5.8-py3-none-any.whl  LICENSE  README.md  Template.py  app.py  bash.sh  database.db  demo.py  dvc.yaml  extraction_landmarks_test.py  index.html  init_setup.sh  params.yaml  requirements.txt  setup.cfg  setup.py  tox.ini
.ipynb_checkpoints/: complete-checkpoint.ipynb
configs/: config.yaml
css/: styles.css
frontend/: Team.html  about.html  beforelogin.html  contact.html  index.html  login.html  nlptextgenerator.html  register.html
js/: asl.js
landmarks_modelling/: landmarks_extraction.ipynb
research/: 635217.parquet  ARM_Data_Preprocessing.ipynb  ARM_GD_Data_Preprocessing_Model_Training.ipynb  ARM_GD_Predictions.ipynb  ARM_GD_Webcam_Predictions.ipynb  ARM_GD_Webcam_Predictions.py  AWSCode.ipynb  Code Modularization.ipynb  Code Modularization.py  Data_Set_Analysis.ipynb  Extracting_info_from_dataset.ipynb  Image_model.ipynb  LSTM_Model_Study_Simplified.ipynb  LSTM_Model_Tuning.ipynb  Trimming Updated.ipynb  Trimming Videos.ipynb  Trimming_Updated.ipynb  arm-gd-data-preprocessing-and-model-training (3).ipynb  complete.ipynb  inference.ipynb  landmarks_extraction.ipynb  live_prediction.ipynb  pipeline.py  pre.py  prediction.py  propre.py  rds_code.ipynb  sentence_generation.ipynb  speech_text.ipynb  stage_01.ipynb  testing_code.py  text_summarization.ipynb
templates/: Team.html  about.html  base.html  contact.html  footer.html  imports.html  index.html  login.html  navbar.html  new.js  new_cs.js  predict.py  prediction.html  (+6 more)
(+24 files in other folders)
