[metadata]
license = MIT
license_file = LICENSE
#mentioned programming language  working on 
# os that you want to run
learning =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

#add more options
#certain requiremets that are fixed
#packages which are having fixed dependency
#also work fine in python 3.7
[options]
install_requires =
    ensure==1.0.2
python_requires = >=3.7    

#add extra options for developer for testing of my application
[options.extras_require]
testing =
    pytest>=7.1.3  #run unit test and integration test if doing
    mypy>=0.971    #check any typing error
    flake8>=5.0.4  #check any mistakes like spaces between 
    tox>=3.25.1    #create different working environment
    black>=22.8.0  #insure that python standard is fallowed,formatting


#about the package data,i.e where is the file
#name of the package is mentioned 
#ignore some tested error ,
[options.package_data]
Team-Vision = py.typed

#linkedin tool
#exclude the file to be checked like empty file ,no stop error to happened
[flake8]
max-line-length = 160
exclude = __init__.py